<?xml version="1.0"?>
<package format="2">
    <name>iai_tracy_description</name>
    <version>0.0.1</version>
    <description>The iai_tracy_description package</description>

    <maintainer email="jeroen.schaefer@outlook.de">Jeroen Schäfer</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>

    </export>
</package>
